--- a/FootballManagerApp/FootballManagerApp/Controller/PlayerViewController.xib
+++ b/FootballManagerApp/FootballManagerApp/Controller/PlayerViewController.xib
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlayerViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlayerViewController" customModule="FootballManagerApp" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -15,8 +16,125 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nOf-AS-BAW">
+                    <rect key="frame" x="140" y="338" width="95" height="30"/>
+                    <state key="normal" title="Upload image"/>
+                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Tlo-lr-Y6x">
+                    <rect key="frame" x="16" y="376" width="343" height="122"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OXu-0O-SgO">
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xnL-Zn-L1K">
+                            <rect key="frame" x="0.0" y="44" width="343" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hLh-nE-IJL">
+                            <rect key="frame" x="0.0" y="88" width="343" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no"/>
+                        </textField>
+                    </subviews>
+                </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wpe-Of-SWE">
+                    <rect key="frame" x="171" y="617" width="34" height="30"/>
+                    <state key="normal" title="Save"/>
+                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E37-QH-FUv">
+                    <rect key="frame" x="16" y="516" width="343" height="66"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="lRh-x2-fVa">
+                            <rect key="frame" x="0.0" y="0.0" width="79.5" height="66"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="siV-2i-weZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="79.5" height="33"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="33" id="D7L-DI-bue"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Jf-EF-UMi">
+                                    <rect key="frame" x="0.0" y="33" width="79.5" height="33"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="33" id="RAY-un-1uW"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="9if-dY-z0B">
+                            <rect key="frame" x="79.5" y="0.0" width="263.5" height="66"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sNO-TH-EN1">
+                                    <rect key="frame" x="0.0" y="0.0" width="263.5" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="32" id="jn5-Kd-99x"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <state key="normal" title="   Press to select"/>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SEm-DC-n53">
+                                    <rect key="frame" x="0.0" y="33" width="263.5" height="33"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="33" id="ZZZ-dA-XYi"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                    <state key="normal" title="   Press to select"/>
+                                </button>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                </stackView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultImage" translatesAutoresizingMaskIntoConstraints="NO" id="9eq-MN-LxK">
+                    <rect key="frame" x="82" y="106" width="210" height="224"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="9eq-MN-LxK" secondAttribute="height" multiplier="15:16" id="TAU-l6-3Nb"/>
+                    </constraints>
+                </imageView>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="88" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z9Q-PD-RMM">
+                    <rect key="frame" x="251" y="119" width="34" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="34" id="Ais-Iu-Ok5"/>
+                        <constraint firstAttribute="height" constant="34" id="tMX-5X-KXX"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+            </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="Z9Q-PD-RMM" firstAttribute="leading" secondItem="9eq-MN-LxK" secondAttribute="trailing" constant="-41" id="0ox-fd-hf3"/>
+                <constraint firstItem="nOf-AS-BAW" firstAttribute="top" secondItem="9eq-MN-LxK" secondAttribute="bottom" constant="8" id="4NE-XV-MiC"/>
+                <constraint firstItem="Tlo-lr-Y6x" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="BNo-NU-Rda"/>
+                <constraint firstItem="wpe-Of-SWE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="171" id="BNw-ee-diN"/>
+                <constraint firstItem="E37-QH-FUv" firstAttribute="top" secondItem="Tlo-lr-Y6x" secondAttribute="bottom" constant="18" id="K04-Ed-6qU"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="E37-QH-FUv" secondAttribute="trailing" constant="16" id="K7X-fW-nLn"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="9eq-MN-LxK" secondAttribute="trailing" constant="83" id="NV2-hQ-ulO"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Tlo-lr-Y6x" secondAttribute="trailing" constant="16" id="Nfe-dx-MrW"/>
+                <constraint firstItem="wpe-Of-SWE" firstAttribute="top" secondItem="E37-QH-FUv" secondAttribute="bottom" constant="35" id="VHR-bw-SMy"/>
+                <constraint firstItem="nOf-AS-BAW" firstAttribute="centerX" secondItem="Tlo-lr-Y6x" secondAttribute="centerX" id="Z5d-Kp-gXb"/>
+                <constraint firstItem="9eq-MN-LxK" firstAttribute="top" secondItem="Z9Q-PD-RMM" secondAttribute="bottom" constant="-47" id="dKs-4p-ZT3"/>
+                <constraint firstItem="9eq-MN-LxK" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="62" id="gBt-Tt-raZ"/>
+                <constraint firstItem="E37-QH-FUv" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="k64-A7-DGs"/>
+                <constraint firstItem="Tlo-lr-Y6x" firstAttribute="top" secondItem="nOf-AS-BAW" secondAttribute="bottom" constant="8" id="t3J-SP-GVz"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="wpe-Of-SWE" secondAttribute="trailing" constant="170" id="tw6-d5-hww"/>
+                <constraint firstItem="9eq-MN-LxK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="82" id="y35-KX-YRq"/>
+            </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="-34.399999999999999" y="71.514242878560722"/>
         </view>
     </objects>
+    <resources>
+        <image name="defaultImage" width="600" height="623"/>
+    </resources>
 </document>
