--- a/FootballManagerApp/FootballManagerApp/Controller/SearchViewController.xib
+++ b/FootballManagerApp/FootballManagerApp/Controller/SearchViewController.xib
@@ -10,7 +10,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController" customModule="FootballManagerApp" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="age" destination="lVv-Lo-yhy" id="qos-vg-y6k"/>
+                <outlet property="labelWintPickerVie" destination="Wgm-NE-Pdm" id="vvX-GU-m9o"/>
+                <outlet property="name" destination="hZ1-bO-rPi" id="3G2-RB-zFS"/>
+                <outlet property="pickerView" destination="ith-7h-Q3M" id="MuN-wm-kMt"/>
+                <outlet property="positionButton" destination="xCJ-YC-Ioc" id="Mow-Ku-bcY"/>
+                <outlet property="resetButton" destination="PZg-iQ-zVI" id="Apw-WA-vMC"/>
+                <outlet property="searchButton" destination="17Z-Nc-B1z" id="0s5-rg-KVm"/>
+                <outlet property="segmentControl" destination="bzi-ej-5my" id="dMF-E0-CN2"/>
+                <outlet property="teamButton" destination="m2W-Y4-7mU" id="Ga4-De-0Dx"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="2yR-Sb-PBx"/>
+                <outlet property="viewWithPickerView" destination="yW0-j8-sOH" id="z6M-Mk-ugg"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -49,12 +59,59 @@
                                 </segmentedControl>
                             </subviews>
                         </stackView>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4if-ed-aVP">
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4if-ed-aVP">
                             <rect key="frame" x="16" y="132" width="228" height="60"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uhk-dl-jpH" customClass="ButtonBlockView" customModule="FootballManagerApp" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="228" height="60"/>
-                                </view>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Gne-3t-svY">
+                                    <rect key="frame" x="0.0" y="0.0" width="66" height="60"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbe-io-hX0">
+                                            <rect key="frame" x="0.0" y="0.0" width="66" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="Vte-7C-exo"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N48-Oz-T82">
+                                            <rect key="frame" x="0.0" y="30" width="66" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="5Wd-ad-6sF"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BzX-bd-8On">
+                                    <rect key="frame" x="76" y="0.0" width="152" height="60"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m2W-Y4-7mU">
+                                            <rect key="frame" x="0.0" y="0.0" width="152" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="xcR-eO-eme"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <state key="normal" title="Press select"/>
+                                            <connections>
+                                                <action selector="selectTeam:" destination="-1" eventType="touchUpInside" id="sol-6X-0y2"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xCJ-YC-Ioc">
+                                            <rect key="frame" x="0.0" y="30" width="152" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="kAT-sU-1Ht"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <state key="normal" title="Press select"/>
+                                            <connections>
+                                                <action selector="selectPosition:" destination="-1" eventType="touchUpInside" id="oc7-5B-VWK"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </stackView>
                             </subviews>
                             <constraints>
                                 <constraint firstAttribute="height" constant="60" id="OUa-IP-Qho"/>
@@ -69,6 +126,9 @@
                                     <state key="normal" title="Reset">
                                         <color key="titleColor" name="lightGray"/>
                                     </state>
+                                    <connections>
+                                        <action selector="pressReset:" destination="-1" eventType="touchUpInside" id="28C-OC-nc3"/>
+                                    </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17Z-Nc-B1z">
                                     <rect key="frame" x="117" y="0.0" width="111" height="30"/>
@@ -76,6 +136,9 @@
                                     <state key="normal" title="Search">
                                         <color key="titleColor" name="lightGray"/>
                                     </state>
+                                    <connections>
+                                        <action selector="pressSearch:" destination="-1" eventType="touchUpInside" id="bRu-57-Hwh"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <constraints>
@@ -102,11 +165,29 @@
                         <constraint firstItem="4if-ed-aVP" firstAttribute="top" secondItem="2r5-Z8-Fzb" secondAttribute="bottom" constant="32" id="zSi-Fp-mYz"/>
                     </constraints>
                 </view>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yW0-j8-sOH" customClass="PickerViewBlock" customModule="FootballManagerApp" customModuleProvider="target">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yW0-j8-sOH" customClass="RoudedCornerView" customModule="FootballManagerApp" customModuleProvider="target">
                     <rect key="frame" x="57.5" y="189.5" width="260" height="288"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make a choice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wgm-NE-Pdm">
+                            <rect key="frame" x="74.5" y="30" width="110" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ith-7h-Q3M">
+                            <rect key="frame" x="0.0" y="72" width="260" height="216"/>
+                        </pickerView>
+                    </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
+                        <constraint firstItem="Wgm-NE-Pdm" firstAttribute="leading" secondItem="yW0-j8-sOH" secondAttribute="leading" constant="74.5" id="4uD-Yi-97d"/>
+                        <constraint firstAttribute="bottom" secondItem="ith-7h-Q3M" secondAttribute="bottom" id="Iiy-NF-qDM"/>
+                        <constraint firstAttribute="trailing" secondItem="ith-7h-Q3M" secondAttribute="trailing" id="SnJ-hz-Dqt"/>
+                        <constraint firstItem="ith-7h-Q3M" firstAttribute="top" secondItem="Wgm-NE-Pdm" secondAttribute="bottom" constant="21.5" id="jSb-0M-r5X"/>
+                        <constraint firstItem="ith-7h-Q3M" firstAttribute="leading" secondItem="yW0-j8-sOH" secondAttribute="leading" id="laO-dj-Wdm"/>
+                        <constraint firstAttribute="trailing" secondItem="Wgm-NE-Pdm" secondAttribute="trailing" constant="75.5" id="m1r-fO-JjJ"/>
                         <constraint firstAttribute="width" constant="260" id="tUf-7g-3Xm"/>
+                        <constraint firstItem="Wgm-NE-Pdm" firstAttribute="top" secondItem="yW0-j8-sOH" secondAttribute="top" constant="30" id="vAm-ir-ZqW"/>
                         <constraint firstAttribute="height" constant="288" id="xOw-hn-Pku"/>
                     </constraints>
                 </view>
