--- a/FootballManagerApp/FootballManagerApp/Controller/PlayerViewController.xib
+++ b/FootballManagerApp/FootballManagerApp/Controller/PlayerViewController.xib
@@ -19,6 +19,7 @@
                 <outlet property="positionButton" destination="jVs-dM-vFM" id="Aas-Yr-5Hi"/>
                 <outlet property="saveButton" destination="kEN-jb-LRX" id="jZy-M0-Y0j"/>
                 <outlet property="scrollView" destination="8lp-6O-ZUC" id="r0u-pa-BLh"/>
+                <outlet property="selectLocationPlayer" destination="GvT-PN-PkT" id="Wo6-5J-U6c"/>
                 <outlet property="teamButton" destination="zX9-Eh-c5X" id="u3Q-lf-lnn"/>
                 <outlet property="uploadImageButton" destination="Npj-CE-WW8" id="ngh-eW-cBq"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
